--- a/hunterweb/src/components/Header/styles.css
+++ b/hunterweb/src/components/Header/styles.css
@@ -1,6 +1,6 @@
 header#main-header {
     height: 60px;
-    background: orange;
+    background: #da552f;
     width: 100%;
     font-size: 18px;
     font-weight: bold;
